Fix database items Swagger apiDoc added recipeById
