# controllers/recipes.controller.js
@@ -4,34 +4,38 @@ const { Ingredient } = require("../models/ingredient.model");
 
 const SHAPE_RECIPE =
   "drink category alcoholic glass description instructions drinkThumb ingredients";
-// Non alcoholic|Alcoholic
-const getCategories = (req, res) => {
+
+const getCategories = async (req, res) => {
+  // const result = await Recipe.distinct("category").sort();
   res.json(CATEGORIES);
 };
 
 const getIngredients = async (req, res) => {
-  console.log(req.user.isAdult);
+  console.log("isAdult", req.user.isAdult);
   const condition = !req.user.isAdult ? "No" : /^(?:Yes\b|No\b)/;
-  console.log(condition);
-  const result = await Ingredient.distinct("title", {
-    alcohol: condition,
-  }).sort();
+  const result = await Ingredient.find(
+    {
+      alcohol: condition,
+    },
+    { title: 1 }
+  ).sort();
   if (!result) throw HttpError(404, "Not Found");
   res.json(result);
 };
 
-const getGlasses = (req, res) => {
+const getGlasses = async (req, res) => {
+  // const result = await Recipe.distinct("glass").sort();
   res.json(GLASSES);
 };
 
 const getRecipeById = async (req, res) => {
   const { id } = req.params;
-  console.log(req.params);
   const result = await Recipe.findById(id, SHAPE_RECIPE).populate(
     "ingredients.ingredientId",
     "ingredientThumb"
   );
   if (!result) throw HttpError(404, "Not Found");
+  console.log(`${result.category}`);
   res.json(result);
 };
 
@@ -42,102 +46,3 @@ module.exports = {
   getRecipeById: ctrlWrap(getRecipeById),
   // getRecipeById: ctrlWrap(getRecipeById),
 };
-
-// const listContacts = async (req, res) => {
-//   const { _id: owner } = req.user;
-//   const { page = 1, limit = 10, favorite } = req.query;
-//   const skip = (page - 1) * limit;
-//   if (!favorite) {
-//     const result = await Contact.find({ owner }, {}, { skip, limit });
-//     res.json(result);
-//     return;
-//   }
-//   const result = await Contact.find({ owner, favorite }, {}, { skip, limit });
-//   res.json(result);
-// };
-
-// const removeContact = async (req, res) => {
-//   const { contactId } = req.params;
-//   const result = await Contact.findByIdAndRemove(contactId);
-//   if (!result) throw HttpError(404, "Not Found");
-//   res.json({ message: "contact deleted" });
-// };
-
-// const addContact = async (req, res) => {
-//   const { _id: owner } = req.user;
-//   const result = await Contact.create({ ...req.body, owner });
-//   if (!result) throw HttpError(404, "Not Found");
-//   res.status(201).json(result);
-// };
-
-// const updateContact = async (req, res) => {
-//   const { contactId } = req.params;
-//   const result = await Contact.findByIdAndUpdate(contactId, req.body, {
-//     new: true,
-//   });
-//   if (!result) throw HttpError(404, "Not Found");
-//   res.json(result);
-// };
-
-// const updateStatusContact = async (req, res) => {
-//   const { contactId } = req.params;
-//   const result = await Contact.findByIdAndUpdate(contactId, req.body, {
-//     new: true,
-//   });
-//   if (!result) throw HttpError(404, "Not Found");
-//   res.json(result);
-// };
-
-// "_id":
-// "drink":
-// "category":
-// "alcoholic":
-// "glass":
-// "description":
-// "instructions":
-// "drinkThumb":
-// "ingredients": []
-
-// коктейль
-// const einendrink = [
-//   {
-//     _id: {},
-//     drink: "",
-//     category: "",
-//     alcoholic: "",
-//     glass: "",
-//     description: "",
-//     instructions: "",
-//     drinkThumb: "",
-//     ingredients: [
-//       {
-//         title: "Dark rum",
-//         measure: "1 1/2 oz ",
-//         ingredientId: {
-//           $oid: "64aebb7f82d96cc69e0eb4a7",
-//         },
-//       },
-//       {
-//         title: "Kahlua",
-//         measure: "1/2 oz ",
-//         ingredientId: {
-//           $oid: "64aebb7f82d96cc69e0eb4bd",
-//         },
-//       },
-//       {
-//         title: "Light cream",
-//         measure: "1 oz ",
-//         ingredientId: {
-//           $oid: "64f1d5c069d8333cf130fb31",
-//         },
-//       },
-//       {
-//         title: "Nutmeg",
-//         measure: "1/8 tsp grated ",
-//         ingredientId: {
-//           $oid: "64f1d5c069d8333cf130fb34",
-//         },
-//       },
-//     ],
-//   },
-// ];
