# swagger.json
@@ -1,7 +1,7 @@
 {
   "openapi": "3.0.1",
   "info": {
-    "version": "1.0.0",
+    "version": "1.0.3",
     "title": "MixMasters backend",
     "description": "Swagger documentation for MixMasters backend."
   },
@@ -27,6 +27,10 @@
     {
       "name": "Filters",
       "description": "Collection filters endpoints"
+    },
+    {
+      "name": "Recipes",
+      "description": "Collection recipes endpoints"
     }
   ],
   "paths": {
@@ -349,6 +353,45 @@
           }
         }
       }
+    },
+    "/api/recipes/{id}": {
+      "get": {
+        "tags": ["Recipes"],
+        "summary": "Extracting data about recipe with :id",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Recipe identifier",
+            "example": "639b6de9ff77d221f190c51f",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "security": [{ "Bearer": [] }],
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetRecipeByIdResponse"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Not authorized",
+            "content": {}
+          },
+          "404": {
+            "description": "Not found",
+            "content": {}
+          }
+        }
+      }
     }
   },
   "components": {
@@ -617,9 +660,19 @@
       "GetIngredientsResponse": {
         "type": "array",
         "items": {
-          "type": "string",
-          "description": "Title name of ingredient",
-          "example": "Angostura bitters"
+          "type": "object",
+          "properties": {
+            "_id": {
+              "type": "string",
+              "description": "Ingredient's ObjectId in the Ingredients collection",
+              "example": "639b6de9ff77d221f190c50f"
+            },
+            "Title": {
+              "type": "string",
+              "description": "Title name of ingredient",
+              "example": "Angostura bitters"
+            }
+          }
         }
       },
       "GetGlassesResponse": {
@@ -629,6 +682,468 @@
           "description": "Title name of glass",
           "example": "Cocktail glass"
         }
+      },
+      "GetRecipeByIdResponse": {
+        "properties": {
+          "_id": {
+            "type": "string",
+            "description": "Recipe's ObjectId in the DataBase",
+            "example": "639b6de9ff77d221f190c50f"
+          },
+          "drink": {
+            "type": "string",
+            "description": "Recipe's name",
+            "example": "Quentin"
+          },
+          "cathegory": { "$ref": "#/components/schemas/CategoryEnum" },
+          "alcoholic": {
+            "type": "string",
+            "enum": ["Alcoholic", "Non alcoholic"],
+            "description": "Is it an alcoholic recipe or not?",
+            "example": "Non alcoholic"
+          },
+          "glass": { "$ref": "#/components/schemas/GlassesEnum" },
+          "description": {
+            "type": "string",
+            "description": "Recipe description",
+            "example": "Apello is a citrusy and refreshing cocktail that..."
+          },
+          "instructions": {
+            "type": "string",
+            "description": "Recipe preparation instructions",
+            "example": "Stirr. Grnish with..."
+          },
+          "drinkThumb": {
+            "type": "string",
+            "description": "An image of the prepared recipe",
+            "example": "https://res.cloudinary.com/dec1shvoo/image/upload/v1689167144/cocktails-v1/drinks/Apello.jpg"
+          },
+          "ingredients": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "_id": {
+                  "type": "string",
+                  "description": "ObjectId of the ingredient in this coctail list",
+                  "example": "651138d8383b0acd30f1323c"
+                },
+                "title": {
+                  "type": "string",
+                  "description": "Title of the ingredient",
+                  "example": "Grapefruit juice"
+                },
+                "measure": {
+                  "type": "string",
+                  "description": "Amount of ingredient required",
+                  "example": "3 cl "
+                },
+                "ingredientId": {
+                  "type": "object",
+                  "properties": {
+                    "_id": {
+                      "type": "string",
+                      "description": "ObjectId of the ingredient in this Ingredients collection",
+                      "example": "64aebb7f82d96cc69e0eb4cc"
+                    },
+                    "ingredientThumb": {
+                      "type": "string",
+                      "description": "An image of the used ingredient",
+                      "example": "https://res.cloudinary.com/dec1shvoo/image/upload/v1689169605/cocktails-v1/ingredient/Grapefruit juice.png"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "IngredientsEnum": {
+        "type": "string",
+        "enum": [
+          "151 proof rum",
+          "7-Up",
+          "Absinthe",
+          "Absolut Citron",
+          "Absolut Kurant",
+          "Absolut Peppar",
+          "Absolut Vodka",
+          "Advocaat",
+          "Agave Syrup",
+          "Ale",
+          "Allspice",
+          "Almond flavoring",
+          "Amaretto",
+          "Amaro Montenegro",
+          "Angelica root",
+          "Angostura Bitters",
+          "Angostura bitters",
+          "Anis",
+          "Anisette",
+          "Aperol",
+          "Apfelkorn",
+          "Apple",
+          "Apple brandy",
+          "Apple cider",
+          "Apple juice",
+          "Applejack",
+          "Apricot Nectar",
+          "Apricot brandy",
+          "Asafoetida",
+          "Añejo rum",
+          "Bacardi Limon",
+          "Baileys irish cream",
+          "Banana",
+          "Banana liqueur",
+          "Beer",
+          "Benedictine",
+          "Berries",
+          "Bitter lemon",
+          "Bitters",
+          "Black Sambuca",
+          "Black pepper",
+          "Blackberries",
+          "Blackberry brandy",
+          "Blackcurrant cordial",
+          "Blackstrap rum",
+          "Blended Scotch",
+          "Blended whiskey",
+          "Blood Orange",
+          "Blue Curacao",
+          "Blueberry schnapps",
+          "Bourbon",
+          "Brandy",
+          "Brown sugar",
+          "Butter",
+          "Butterscotch schnapps",
+          "Cachaca",
+          "Campari",
+          "Cantaloupe",
+          "Caramel coloring",
+          "Carbonated soft drink",
+          "Carbonated water",
+          "Cardamom",
+          "Cayenne pepper",
+          "Celery salt",
+          "Chambord raspberry liqueur",
+          "Champagne",
+          "Cherries",
+          "Cherry",
+          "Cherry Heering",
+          "Cherry Juice",
+          "Cherry brandy",
+          "Cherry liqueur",
+          "Chocolate",
+          "Chocolate liqueur",
+          "Chocolate syrup",
+          "Cider",
+          "Cinnamon",
+          "Cloves",
+          "Club soda",
+          "Coca-Cola",
+          "Cocoa powder",
+          "Coconut Liqueur",
+          "Coconut liqueur",
+          "Coconut milk",
+          "Coconut syrup",
+          "Coffee",
+          "Coffee brandy",
+          "Coffee liqueur",
+          "Cognac",
+          "Cointreau",
+          "Condensed milk",
+          "Coriander",
+          "Corn syrup",
+          "Corona",
+          "Cranberries",
+          "Cranberry juice",
+          "Cranberry vodka",
+          "Cream",
+          "Cream of coconut",
+          "Creme De Banane",
+          "Creme de Banane",
+          "Creme de Cacao",
+          "Creme de Cassis",
+          "Creme de Mure",
+          "Crown Royal",
+          "Cucumber",
+          "Cumin seed",
+          "Daiquiri mix",
+          "Dark Creme de Cacao",
+          "Dark rum",
+          "Demerara Sugar",
+          "Dr. Pepper",
+          "Drambuie",
+          "Dry Vermouth",
+          "Dubonnet Rouge",
+          "Egg",
+          "Egg White",
+          "Egg white",
+          "Egg yolk",
+          "Elderflower cordial",
+          "Espresso",
+          "Everclear",
+          "Falernum",
+          "Figs",
+          "Firewater",
+          "Frangelico",
+          "Fresca",
+          "Fresh Lemon Juice",
+          "Fresh Lime Juice",
+          "Fruit",
+          "Fruit juice",
+          "Fruit punch",
+          "Galliano",
+          "Gin",
+          "Ginger",
+          "Ginger Beer",
+          "Ginger Syrup",
+          "Ginger ale",
+          "Godiva liqueur",
+          "Gold rum",
+          "Goldschlager",
+          "Grain alcohol",
+          "Grand Marnier",
+          "Grape Soda",
+          "Grape juice",
+          "Grapefruit juice",
+          "Grapes",
+          "Green Chartreuse",
+          "Green Creme de Menthe",
+          "Grenadine",
+          "Guinness stout",
+          "Half-and-half",
+          "Heavy cream",
+          "Honey",
+          "Honey syrup",
+          "Hot Chocolate",
+          "Hot Damn",
+          "Hot Sauce",
+          "Ice",
+          "Iced tea",
+          "Irish cream",
+          "Irish whiskey",
+          "Islay single malt Scotch",
+          "Jack Daniels",
+          "Jagermeister",
+          "Jello",
+          "Jim Beam",
+          "Johnnie Walker",
+          "Jägermeister",
+          "Kahlua",
+          "Kiwi",
+          "Kiwi liqueur",
+          "Kool-Aid",
+          "Lager",
+          "Lavender",
+          "Lemon",
+          "Lemon Peel",
+          "Lemon juice",
+          "Lemon peel",
+          "Lemon vodka",
+          "Lemon-lime soda",
+          "Lemonade",
+          "Light cream",
+          "Light rum",
+          "Lillet",
+          "Lillet Blanc",
+          "Lime",
+          "Lime juice",
+          "Lime peel",
+          "Lime vodka",
+          "Limeade",
+          "Malibu rum",
+          "Mango",
+          "Maple syrup",
+          "Maraschino Cherry",
+          "Maraschino Liqueur",
+          "Maraschino cherry",
+          "Maraschino liqueur",
+          "Marshmallows",
+          "Melon Liqueur",
+          "Mezcal",
+          "Midori melon liqueur",
+          "Milk",
+          "Mint",
+          "Mint syrup",
+          "Mountain Dew",
+          "Nutmeg",
+          "Olive",
+          "Olive Brine",
+          "Orange",
+          "Orange Curacao",
+          "Orange Juice",
+          "Orange Peel",
+          "Orange bitters",
+          "Orange juice",
+          "Orange peel",
+          "Orange spiral",
+          "Oreo cookie",
+          "Orgeat syrup",
+          "Ouzo",
+          "Papaya",
+          "Passion fruit juice",
+          "Passion fruit syrup",
+          "Passoa",
+          "Peach Bitters",
+          "Peach Vodka",
+          "Peach brandy",
+          "Peach nectar",
+          "Peach schnapps",
+          "Peachtree schnapps",
+          "Pepper",
+          "Peppermint schnapps",
+          "Pepsi Cola",
+          "Pernod",
+          "Peychaud bitters",
+          "Pina colada mix",
+          "Pineapple",
+          "Pineapple Syrup",
+          "Pineapple juice",
+          "Pink lemonade",
+          "Pisang Ambon",
+          "Pisco",
+          "Pomegranate juice",
+          "Port",
+          "Powdered sugar",
+          "Prosecco",
+          "Raspberry Liqueur",
+          "Raspberry syrup",
+          "Raspberry vodka",
+          "Red Chili Flakes",
+          "Red wine",
+          "Ricard",
+          "Root beer",
+          "Rose",
+          "Rosemary",
+          "Rosemary Syrup",
+          "Roses sweetened lime juice",
+          "Rosso Vermouth",
+          "Ruby Port",
+          "Rum",
+          "Rumple Minze",
+          "Rye Whiskey",
+          "Rye whiskey",
+          "Salt",
+          "Sambuca",
+          "Sarsaparilla",
+          "Schweppes Russchian",
+          "Scotch",
+          "Sherbet",
+          "Sherry",
+          "Sirup of roses",
+          "Sloe gin",
+          "Soda Water",
+          "Soda water",
+          "Sour mix",
+          "Southern Comfort",
+          "Soy Sauce",
+          "Spiced rum",
+          "Sprite",
+          "St. Germain",
+          "Strawberries",
+          "Strawberry liqueur",
+          "Strawberry schnapps",
+          "Sugar",
+          "Sugar syrup",
+          "Surge",
+          "Sweet Vermouth",
+          "Sweet and Sour",
+          "Sweet and sour",
+          "Tabasco sauce",
+          "Tea",
+          "Tennessee whiskey",
+          "Tequila",
+          "Thyme",
+          "Tia maria",
+          "Tomato juice",
+          "Tonic Water",
+          "Tonic water",
+          "Triple sec",
+          "Vanilla",
+          "Vanilla extract",
+          "Vanilla ice-cream",
+          "Vanilla syrup",
+          "Vanilla vodka",
+          "Vermouth",
+          "Vodka",
+          "Water",
+          "Watermelon",
+          "Whipped cream",
+          "Whipping cream",
+          "Whiskey",
+          "Whisky",
+          "White Creme de Menthe",
+          "White Rum",
+          "White Wine",
+          "White rum",
+          "Wine",
+          "Worcestershire Sauce",
+          "Wormwood",
+          "Yellow Chartreuse",
+          "Yoghurt",
+          "Yukon Jack",
+          "Zima"
+        ],
+        "description": "Ingredients list for the recipe",
+        "example": "Absinthe"
+      },
+      "CategoryEnum": {
+        "type": "string",
+        "enum": [
+          "Beer",
+          "Cocktail",
+          "Cocoa",
+          "Coffee/Tea",
+          "Homemade Liqueur",
+          "Ordinary Drink",
+          "Other/Unknown",
+          "Punch/Party Drink",
+          "Shake",
+          "Shot",
+          "Soft Drink"
+        ],
+        "description": "Categories list for the recipe",
+        "example": "Cocktail"
+      },
+      "GlassesEnum": {
+        "type": "string",
+        "enum": [
+          "Balloon Glass",
+          "Beer Glass",
+          "Beer mug",
+          "Beer pilsner",
+          "Brandy snifter",
+          "Champagne flute",
+          "Cocktail glass",
+          "Coffee mug",
+          "Collins glass",
+          "Copper Mug",
+          "Cordial glass",
+          "Coupe Glass",
+          "Highball glass",
+          "Hurricane glass",
+          "Irish coffee cup",
+          "Jar",
+          "Margarita glass",
+          "Margarita/Coupette glass",
+          "Martini Glass",
+          "Mason jar",
+          "Nick and Nora Glass",
+          "Old-fashioned glass",
+          "Parfait glass",
+          "Pint glass",
+          "Pitcher",
+          "Pousse cafe glass",
+          "Punch bowl",
+          "Shot glass",
+          "Whiskey Glass",
+          "Whiskey sour glass",
+          "White wine glass",
+          "Wine Glass"
+        ],
+        "description": "Glasses list for the recipe",
+        "example": "Cocktail glass"
       }
     },
     "securitySchemes": {
